--- a/package.json
+++ b/package.json
@@ -1,18 +1,32 @@
 {
+  "homepage": "https://github.com/matejBandik/git-wt.git",
   "name": "typescript-react-example",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@gitbeaker/browser": "^23.5.0",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.4",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "@types/underscore": "^1.10.22",
+    "final-form": "^4.20.1",
+    "jira-client": "^6.20.0",
+    "mobx": "^5.15.6",
+    "mobx-react-lite": "^2.2.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-final-form": "^6.5.1",
     "react-scripts": "3.1.1",
-    "typescript": "3.6.2"
+    "semantic-ui-calendar-react": "^0.15.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^1.2.1",
+    "typescript": "3.6.2",
+    "underscore": "^1.10.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -32,5 +46,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jira-client": "^6.13.1",
+    "gh-pages": "^3.1.0"
   }
 }
