--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
     "@types/underscore": "^1.10.22",
+    "antd": "^4.6.6",
     "axios": "^0.20.0",
     "final-form": "^4.20.1",
     "jira-client": "^6.20.0",
