--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.9.0",
     "react-final-form": "^6.5.1",
     "react-scripts": "3.1.1",
+    "react-scroll": "^1.8.1",
     "semantic-ui-calendar-react": "^0.15.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.1",
